tweaks on skill wheel and stop timelmeline animate on mobile

--- a/components/skillDisplay/style.module.scss
+++ b/components/skillDisplay/style.module.scss
@@ -18,11 +18,36 @@
 .skill-bar-holder {
     // display: table
     height: 500px;
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
     margin-bottom: 50px;
+    padding-right: 20px;
 }
 
 .skill-bar-item {
     // display: table-cell;
     // width: 100%;
+}
+
+/* width */
+.skill-bar-holder::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+.skill-bar-holder::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgba(100, 100, 100, 0.8);
+    border-radius: 10px;
+}
+
+/* Handle */
+.skill-bar-holder::-webkit-scrollbar-thumb {
+    background: rgba(11, 100, 195, 0.4);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+.skill-bar-holder::-webkit-scrollbar-thumb:hover {
+    background: rgba(11, 100, 195, 0.8);
+    ;
 }
